minialgo.output
Grammaire

    0 $accept: programme $end

    1 programme: PROGRAM IDF declarations BEGIN_T instructions END_T

    2 declarations: DECL liste_declarations ENDDECL

    3 liste_declarations: /* vide */
    4                   | liste_declarations declaration

    5 declaration: type ':' liste_id ';'
    6            | declaration_constante

    7 type: INTEGER
    8     | FLOAT_T

    9 liste_id: liste_id ',' IDF
   10         | liste_id ',' IDF EQL expression
   11         | IDF
   12         | IDF EQL expression
   13         | IDF '[' INT_CONST ']'

   14 declaration_constante: CONST IDF EQL INT_CONST ';'
   15                      | CONST IDF EQL FLOAT_CONST ';'

   16 instructions: /* vide */
   17             | instructions instruction

   18 instruction: affectation
   19            | declaration_constante
   20            | InstructionFor
   21            | InstructionWhile
   22            | InstructionIf
   23            | write

   24 affectation: IDF EQL expression ';'
   25            | IDF '[' expression ']' EQL expression ';'

   26 expression: INT_CONST
   27           | FLOAT_CONST
   28           | IDF
   29           | IDF '[' expression ']'
   30           | expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '(' expression ')'

   35 condition: expression '>' expression
   36          | expression '<' expression
   37          | expression EQ expression
   38          | expression NEQ expression
   39          | expression GE expression
   40          | expression LE expression
   41          | '!' expression
   42          | condition AND condition
   43          | condition OR condition

   44 @1: /* vide */

   45 @2: /* vide */

   46 InstructionIf: IF '(' condition ')' @1 '{' instructions '}' @2 partie_else

   47 partie_else: /* vide */
   48            | ELSE '{' instructions '}'

   49 @3: /* vide */

   50 @4: /* vide */

   51 InstructionWhile: WHILE @3 '(' condition ')' @4 '{' instructions '}'

   52 @5: /* vide */

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

   54 write: WRITE '(' expression ')' ';'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 41
'(' (40) 34 46 51 53 54
')' (41) 34 46 51 53 54
'*' (42) 32
'+' (43) 30
',' (44) 9 10
'-' (45) 31
'/' (47) 33
':' (58) 5 53
';' (59) 5 14 15 24 25 54
'<' (60) 36
'>' (62) 35
'[' (91) 13 25 29
']' (93) 13 25 29
'{' (123) 46 48 51 53
'}' (125) 46 48 51 53
error (256)
PROGRAM (258) 1
DECL (259) 2
ENDDECL (260) 2
BEGIN_T (261) 1
END_T (262) 1
INTEGER (263) 7
FLOAT_T (264) 8
CONST (265) 14 15
IF (266) 46
ELSE (267) 48
WHILE (268) 51
FOR (269) 53
WRITE (270) 54
EQL (271) 10 12 14 15 24 25
EQ (272) 37
NEQ (273) 38
GE (274) 39
LE (275) 40
AND (276) 42
OR (277) 43
IDF (278) 1 9 10 11 12 13 14 15 24 25 28 29 53
INT_CONST (279) 13 14 26 53
FLOAT_CONST (280) 15 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (42)
    à gauche: 0
programme (43)
    à gauche: 1, à droite: 0
declarations (44)
    à gauche: 2, à droite: 1
liste_declarations (45)
    à gauche: 3 4, à droite: 2 4
declaration (46)
    à gauche: 5 6, à droite: 4
type (47)
    à gauche: 7 8, à droite: 5
liste_id (48)
    à gauche: 9 10 11 12 13, à droite: 5 9 10
declaration_constante (49)
    à gauche: 14 15, à droite: 6 19
instructions (50)
    à gauche: 16 17, à droite: 1 17 46 48 51 53
instruction (51)
    à gauche: 18 19 20 21 22 23, à droite: 17
affectation (52)
    à gauche: 24 25, à droite: 18
expression (53)
    à gauche: 26 27 28 29 30 31 32 33 34, à droite: 10 12 24 25 29
    30 31 32 33 34 35 36 37 38 39 40 41 54
condition (54)
    à gauche: 35 36 37 38 39 40 41 42 43, à droite: 42 43 46 51
InstructionIf (55)
    à gauche: 46, à droite: 22
@1 (56)
    à gauche: 44, à droite: 46
@2 (57)
    à gauche: 45, à droite: 46
partie_else (58)
    à gauche: 47 48, à droite: 46
InstructionWhile (59)
    à gauche: 51, à droite: 21
@3 (60)
    à gauche: 49, à droite: 51
@4 (61)
    à gauche: 50, à droite: 51
InstructionFor (62)
    à gauche: 53, à droite: 20
@5 (63)
    à gauche: 52, à droite: 53
write (64)
    à gauche: 54, à droite: 23


état 0

    0 $accept: . programme $end

    PROGRAM  décalage et aller à l'état 1

    programme  aller à l'état 2


état 1

    1 programme: PROGRAM . IDF declarations BEGIN_T instructions END_T

    IDF  décalage et aller à l'état 3


état 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 4


état 3

    1 programme: PROGRAM IDF . declarations BEGIN_T instructions END_T

    DECL  décalage et aller à l'état 5

    declarations  aller à l'état 6


état 4

    0 $accept: programme $end .

    $défaut  accepter


état 5

    2 declarations: DECL . liste_declarations ENDDECL

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)

    liste_declarations  aller à l'état 7


état 6

    1 programme: PROGRAM IDF declarations . BEGIN_T instructions END_T

    BEGIN_T  décalage et aller à l'état 8


état 7

    2 declarations: DECL liste_declarations . ENDDECL
    4 liste_declarations: liste_declarations . declaration

    ENDDECL  décalage et aller à l'état 9
    INTEGER  décalage et aller à l'état 10
    FLOAT_T  décalage et aller à l'état 11
    CONST    décalage et aller à l'état 12

    declaration            aller à l'état 13
    type                   aller à l'état 14
    declaration_constante  aller à l'état 15


état 8

    1 programme: PROGRAM IDF declarations BEGIN_T . instructions END_T

    $défaut  réduction par utilisation de la règle 16 (instructions)

    instructions  aller à l'état 16


état 9

    2 declarations: DECL liste_declarations ENDDECL .

    $défaut  réduction par utilisation de la règle 2 (declarations)


état 10

    7 type: INTEGER .

    $défaut  réduction par utilisation de la règle 7 (type)


état 11

    8 type: FLOAT_T .

    $défaut  réduction par utilisation de la règle 8 (type)


état 12

   14 declaration_constante: CONST . IDF EQL INT_CONST ';'
   15                      | CONST . IDF EQL FLOAT_CONST ';'

    IDF  décalage et aller à l'état 17


état 13

    4 liste_declarations: liste_declarations declaration .

    $défaut  réduction par utilisation de la règle 4 (liste_declarations)


état 14

    5 declaration: type . ':' liste_id ';'

    ':'  décalage et aller à l'état 18


état 15

    6 declaration: declaration_constante .

    $défaut  réduction par utilisation de la règle 6 (declaration)


état 16

    1 programme: PROGRAM IDF declarations BEGIN_T instructions . END_T
   17 instructions: instructions . instruction

    END_T  décalage et aller à l'état 19
    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 20
    WHILE  décalage et aller à l'état 21
    FOR    décalage et aller à l'état 22
    WRITE  décalage et aller à l'état 23
    IDF    décalage et aller à l'état 24

    declaration_constante  aller à l'état 25
    instruction            aller à l'état 26
    affectation            aller à l'état 27
    InstructionIf          aller à l'état 28
    InstructionWhile       aller à l'état 29
    InstructionFor         aller à l'état 30
    write                  aller à l'état 31


état 17

   14 declaration_constante: CONST IDF . EQL INT_CONST ';'
   15                      | CONST IDF . EQL FLOAT_CONST ';'

    EQL  décalage et aller à l'état 32


état 18

    5 declaration: type ':' . liste_id ';'

    IDF  décalage et aller à l'état 33

    liste_id  aller à l'état 34


état 19

    1 programme: PROGRAM IDF declarations BEGIN_T instructions END_T .

    $défaut  réduction par utilisation de la règle 1 (programme)


état 20

   46 InstructionIf: IF . '(' condition ')' @1 '{' instructions '}' @2 partie_else

    '('  décalage et aller à l'état 35


état 21

   51 InstructionWhile: WHILE . @3 '(' condition ')' @4 '{' instructions '}'

    $défaut  réduction par utilisation de la règle 49 (@3)

    @3  aller à l'état 36


état 22

   53 InstructionFor: FOR . '(' IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    '('  décalage et aller à l'état 37


état 23

   54 write: WRITE . '(' expression ')' ';'

    '('  décalage et aller à l'état 38


état 24

   24 affectation: IDF . EQL expression ';'
   25            | IDF . '[' expression ']' EQL expression ';'

    EQL  décalage et aller à l'état 39
    '['  décalage et aller à l'état 40


état 25

   19 instruction: declaration_constante .

    $défaut  réduction par utilisation de la règle 19 (instruction)


état 26

   17 instructions: instructions instruction .

    $défaut  réduction par utilisation de la règle 17 (instructions)


état 27

   18 instruction: affectation .

    $défaut  réduction par utilisation de la règle 18 (instruction)


état 28

   22 instruction: InstructionIf .

    $défaut  réduction par utilisation de la règle 22 (instruction)


état 29

   21 instruction: InstructionWhile .

    $défaut  réduction par utilisation de la règle 21 (instruction)


état 30

   20 instruction: InstructionFor .

    $défaut  réduction par utilisation de la règle 20 (instruction)


état 31

   23 instruction: write .

    $défaut  réduction par utilisation de la règle 23 (instruction)


état 32

   14 declaration_constante: CONST IDF EQL . INT_CONST ';'
   15                      | CONST IDF EQL . FLOAT_CONST ';'

    INT_CONST    décalage et aller à l'état 41
    FLOAT_CONST  décalage et aller à l'état 42


état 33

   11 liste_id: IDF .
   12         | IDF . EQL expression
   13         | IDF . '[' INT_CONST ']'

    EQL  décalage et aller à l'état 43
    '['  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 11 (liste_id)


état 34

    5 declaration: type ':' liste_id . ';'
    9 liste_id: liste_id . ',' IDF
   10         | liste_id . ',' IDF EQL expression

    ';'  décalage et aller à l'état 45
    ','  décalage et aller à l'état 46


état 35

   46 InstructionIf: IF '(' . condition ')' @1 '{' instructions '}' @2 partie_else

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '!'          décalage et aller à l'état 50
    '('          décalage et aller à l'état 51

    expression  aller à l'état 52
    condition   aller à l'état 53


état 36

   51 InstructionWhile: WHILE @3 . '(' condition ')' @4 '{' instructions '}'

    '('  décalage et aller à l'état 54


état 37

   53 InstructionFor: FOR '(' . IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    IDF  décalage et aller à l'état 55


état 38

   54 write: WRITE '(' . expression ')' ';'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 56


état 39

   24 affectation: IDF EQL . expression ';'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 57


état 40

   25 affectation: IDF '[' . expression ']' EQL expression ';'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 58


état 41

   14 declaration_constante: CONST IDF EQL INT_CONST . ';'

    ';'  décalage et aller à l'état 59


état 42

   15 declaration_constante: CONST IDF EQL FLOAT_CONST . ';'

    ';'  décalage et aller à l'état 60


état 43

   12 liste_id: IDF EQL . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 61


état 44

   13 liste_id: IDF '[' . INT_CONST ']'

    INT_CONST  décalage et aller à l'état 62


état 45

    5 declaration: type ':' liste_id ';' .

    $défaut  réduction par utilisation de la règle 5 (declaration)


état 46

    9 liste_id: liste_id ',' . IDF
   10         | liste_id ',' . IDF EQL expression

    IDF  décalage et aller à l'état 63


état 47

   28 expression: IDF .
   29           | IDF . '[' expression ']'

    '['  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 28 (expression)


état 48

   26 expression: INT_CONST .

    $défaut  réduction par utilisation de la règle 26 (expression)


état 49

   27 expression: FLOAT_CONST .

    $défaut  réduction par utilisation de la règle 27 (expression)


état 50

   41 condition: '!' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 65


état 51

   34 expression: '(' . expression ')'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 66


état 52

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35 condition: expression . '>' expression
   36          | expression . '<' expression
   37          | expression . EQ expression
   38          | expression . NEQ expression
   39          | expression . GE expression
   40          | expression . LE expression

    EQ   décalage et aller à l'état 67
    NEQ  décalage et aller à l'état 68
    GE   décalage et aller à l'état 69
    LE   décalage et aller à l'état 70
    '<'  décalage et aller à l'état 71
    '>'  décalage et aller à l'état 72
    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76


état 53

   42 condition: condition . AND condition
   43          | condition . OR condition
   46 InstructionIf: IF '(' condition . ')' @1 '{' instructions '}' @2 partie_else

    AND  décalage et aller à l'état 77
    OR   décalage et aller à l'état 78
    ')'  décalage et aller à l'état 79


état 54

   51 InstructionWhile: WHILE @3 '(' . condition ')' @4 '{' instructions '}'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '!'          décalage et aller à l'état 50
    '('          décalage et aller à l'état 51

    expression  aller à l'état 52
    condition   aller à l'état 80


état 55

   53 InstructionFor: FOR '(' IDF . ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    ':'  décalage et aller à l'état 81


état 56

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   54 write: WRITE '(' expression . ')' ';'

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ')'  décalage et aller à l'état 82


état 57

   24 affectation: IDF EQL expression . ';'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ';'  décalage et aller à l'état 83


état 58

   25 affectation: IDF '[' expression . ']' EQL expression ';'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ']'  décalage et aller à l'état 84


état 59

   14 declaration_constante: CONST IDF EQL INT_CONST ';' .

    $défaut  réduction par utilisation de la règle 14 (declaration_constante)


état 60

   15 declaration_constante: CONST IDF EQL FLOAT_CONST ';' .

    $défaut  réduction par utilisation de la règle 15 (declaration_constante)


état 61

   12 liste_id: IDF EQL expression .
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 12 (liste_id)


état 62

   13 liste_id: IDF '[' INT_CONST . ']'

    ']'  décalage et aller à l'état 85


état 63

    9 liste_id: liste_id ',' IDF .
   10         | liste_id ',' IDF . EQL expression

    EQL  décalage et aller à l'état 86

    $défaut  réduction par utilisation de la règle 9 (liste_id)


état 64

   29 expression: IDF '[' . expression ']'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 87


état 65

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   41 condition: '!' expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 41 (condition)


état 66

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   34           | '(' expression . ')'

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ')'  décalage et aller à l'état 88


état 67

   37 condition: expression EQ . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 89


état 68

   38 condition: expression NEQ . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 90


état 69

   39 condition: expression GE . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 91


état 70

   40 condition: expression LE . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 92


état 71

   36 condition: expression '<' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 93


état 72

   35 condition: expression '>' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 94


état 73

   30 expression: expression '+' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 95


état 74

   31 expression: expression '-' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 96


état 75

   32 expression: expression '*' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 97


état 76

   33 expression: expression '/' . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 98


état 77

   42 condition: condition AND . condition

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '!'          décalage et aller à l'état 50
    '('          décalage et aller à l'état 51

    expression  aller à l'état 52
    condition   aller à l'état 99


état 78

   43 condition: condition OR . condition

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '!'          décalage et aller à l'état 50
    '('          décalage et aller à l'état 51

    expression  aller à l'état 52
    condition   aller à l'état 100


état 79

   46 InstructionIf: IF '(' condition ')' . @1 '{' instructions '}' @2 partie_else

    $défaut  réduction par utilisation de la règle 44 (@1)

    @1  aller à l'état 101


état 80

   42 condition: condition . AND condition
   43          | condition . OR condition
   51 InstructionWhile: WHILE @3 '(' condition . ')' @4 '{' instructions '}'

    AND  décalage et aller à l'état 77
    OR   décalage et aller à l'état 78
    ')'  décalage et aller à l'état 102


état 81

   53 InstructionFor: FOR '(' IDF ':' . INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    INT_CONST  décalage et aller à l'état 103


état 82

   54 write: WRITE '(' expression ')' . ';'

    ';'  décalage et aller à l'état 104


état 83

   24 affectation: IDF EQL expression ';' .

    $défaut  réduction par utilisation de la règle 24 (affectation)


état 84

   25 affectation: IDF '[' expression ']' . EQL expression ';'

    EQL  décalage et aller à l'état 105


état 85

   13 liste_id: IDF '[' INT_CONST ']' .

    $défaut  réduction par utilisation de la règle 13 (liste_id)


état 86

   10 liste_id: liste_id ',' IDF EQL . expression

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 106


état 87

   29 expression: IDF '[' expression . ']'
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ']'  décalage et aller à l'état 107


état 88

   34 expression: '(' expression ')' .

    $défaut  réduction par utilisation de la règle 34 (expression)


état 89

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   37 condition: expression EQ expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 37 (condition)


état 90

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   38 condition: expression NEQ expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 38 (condition)


état 91

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   39 condition: expression GE expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 39 (condition)


état 92

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   40 condition: expression LE expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 40 (condition)


état 93

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   36 condition: expression '<' expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 36 (condition)


état 94

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35 condition: expression '>' expression .

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 35 (condition)


état 95

   30 expression: expression . '+' expression
   30           | expression '+' expression .
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 30 (expression)


état 96

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   31           | expression '-' expression .
   32           | expression . '*' expression
   33           | expression . '/' expression

    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 31 (expression)


état 97

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   32           | expression '*' expression .
   33           | expression . '/' expression

    $défaut  réduction par utilisation de la règle 32 (expression)


état 98

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   33           | expression '/' expression .

    $défaut  réduction par utilisation de la règle 33 (expression)


état 99

   42 condition: condition . AND condition
   42          | condition AND condition .
   43          | condition . OR condition

    $défaut  réduction par utilisation de la règle 42 (condition)


état 100

   42 condition: condition . AND condition
   43          | condition . OR condition
   43          | condition OR condition .

    AND  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 43 (condition)


état 101

   46 InstructionIf: IF '(' condition ')' @1 . '{' instructions '}' @2 partie_else

    '{'  décalage et aller à l'état 108


état 102

   51 InstructionWhile: WHILE @3 '(' condition ')' . @4 '{' instructions '}'

    $défaut  réduction par utilisation de la règle 50 (@4)

    @4  aller à l'état 109


état 103

   53 InstructionFor: FOR '(' IDF ':' INT_CONST . ':' INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    ':'  décalage et aller à l'état 110


état 104

   54 write: WRITE '(' expression ')' ';' .

    $défaut  réduction par utilisation de la règle 54 (write)


état 105

   25 affectation: IDF '[' expression ']' EQL . expression ';'

    IDF          décalage et aller à l'état 47
    INT_CONST    décalage et aller à l'état 48
    FLOAT_CONST  décalage et aller à l'état 49
    '('          décalage et aller à l'état 51

    expression  aller à l'état 111


état 106

   10 liste_id: liste_id ',' IDF EQL expression .
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76

    $défaut  réduction par utilisation de la règle 10 (liste_id)


état 107

   29 expression: IDF '[' expression ']' .

    $défaut  réduction par utilisation de la règle 29 (expression)


état 108

   46 InstructionIf: IF '(' condition ')' @1 '{' . instructions '}' @2 partie_else

    $défaut  réduction par utilisation de la règle 16 (instructions)

    instructions  aller à l'état 112


état 109

   51 InstructionWhile: WHILE @3 '(' condition ')' @4 . '{' instructions '}'

    '{'  décalage et aller à l'état 113


état 110

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' . INT_CONST ':' INT_CONST ')' @5 '{' instructions '}'

    INT_CONST  décalage et aller à l'état 114


état 111

   25 affectation: IDF '[' expression ']' EQL expression . ';'
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression

    '+'  décalage et aller à l'état 73
    '-'  décalage et aller à l'état 74
    '*'  décalage et aller à l'état 75
    '/'  décalage et aller à l'état 76
    ';'  décalage et aller à l'état 115


état 112

   17 instructions: instructions . instruction
   46 InstructionIf: IF '(' condition ')' @1 '{' instructions . '}' @2 partie_else

    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 20
    WHILE  décalage et aller à l'état 21
    FOR    décalage et aller à l'état 22
    WRITE  décalage et aller à l'état 23
    IDF    décalage et aller à l'état 24
    '}'    décalage et aller à l'état 116

    declaration_constante  aller à l'état 25
    instruction            aller à l'état 26
    affectation            aller à l'état 27
    InstructionIf          aller à l'état 28
    InstructionWhile       aller à l'état 29
    InstructionFor         aller à l'état 30
    write                  aller à l'état 31


état 113

   51 InstructionWhile: WHILE @3 '(' condition ')' @4 '{' . instructions '}'

    $défaut  réduction par utilisation de la règle 16 (instructions)

    instructions  aller à l'état 117


état 114

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST . ':' INT_CONST ')' @5 '{' instructions '}'

    ':'  décalage et aller à l'état 118


état 115

   25 affectation: IDF '[' expression ']' EQL expression ';' .

    $défaut  réduction par utilisation de la règle 25 (affectation)


état 116

   46 InstructionIf: IF '(' condition ')' @1 '{' instructions '}' . @2 partie_else

    $défaut  réduction par utilisation de la règle 45 (@2)

    @2  aller à l'état 119


état 117

   17 instructions: instructions . instruction
   51 InstructionWhile: WHILE @3 '(' condition ')' @4 '{' instructions . '}'

    CONST  décalage et aller à l'état 12
    IF     décalage et aller à l'état 20
    WHILE  décalage et aller à l'état 21
    FOR    décalage et aller à l'état 22
    WRITE  décalage et aller à l'état 23
    IDF    décalage et aller à l'état 24
    '}'    décalage et aller à l'état 120

    declaration_constante  aller à l'état 25
    instruction            aller à l'état 26
    affectation            aller à l'état 27
    InstructionIf          aller à l'état 28
    InstructionWhile       aller à l'état 29
    InstructionFor         aller à l'état 30
    write                  aller à l'état 31


état 118

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST ':' . INT_CONST ')' @5 '{' instructions '}'

    INT_CONST  décalage et aller à l'état 121


état 119

   46 InstructionIf: IF '(' condition ')' @1 '{' instructions '}' @2 . partie_else

    ELSE  décalage et aller à l'état 122

    $défaut  réduction par utilisation de la règle 47 (partie_else)

    partie_else  aller à l'état 123


état 120

   51 InstructionWhile: WHILE @3 '(' condition ')' @4 '{' instructions '}' .

    $défaut  réduction par utilisation de la règle 51 (InstructionWhile)


état 121

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST . ')' @5 '{' instructions '}'

    ')'  décalage et aller à l'état 124


état 122

   48 partie_else: ELSE . '{' instructions '}'

    '{'  décalage et aller à l'état 125


état 123

   46 InstructionIf: IF '(' condition ')' @1 '{' instructions '}' @2 partie_else .

    $défaut  réduction par utilisation de la règle 46 (InstructionIf)


état 124

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' . @5 '{' instructions '}'

    $défaut  réduction par utilisation de la règle 52 (@5)

    @5  aller à l'état 126


état 125

   48 partie_else: ELSE '{' . instructions '}'

    $défaut  réduction par utilisation de la règle 16 (instructions)

    instructions  aller à l'état 127


état 126

   53 InstructionFor: FOR '(' IDF ':' INT_CONST ':' INT_CONST ':' INT_CONST ')' @5 . '{' instructions '}'

    '{'  décalage et aller à l'état 128


état 127

   17 instructions: instructions . instruction
